[04] modificacion de archivos

--- a/hola.html
+++ b/hola.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>HOLA MUNDO :D </p>
+    <h1>Omar Hugo Alexander Barrios Catun</h1>
+    <h2>Ingenieria Informatica</h2>
 </body>
 </html>
